# csc8502-advanced-graphics

./: .gitignore  CMakeLists.txt  GraphicsTutorials.sln  flake.nix  readme.md  windows_is_pain.bat
1) Your First Triangle/: CMakeLists.txt  Renderer.cpp  Renderer.h  tutorial1.cpp
10) Post Processing/: CMakeLists.txt  Renderer.cpp  Renderer.h  Tutorial10.cpp  Tutorial10.vcxproj
11) Per Fragment Lighting A/: CMakeLists.txt  Renderer.cpp  Renderer.h  Tutorial11.cpp  Tutorial11.vcxproj
12) Per Fragment Lighting B/: CMakeLists.txt  Renderer.cpp  Renderer.h  Tutorial12.cpp
13) Cube Mapping/: CMakeLists.txt  Renderer.cpp  Renderer.h  Tutorial13.cpp
14) Shadow Mapping/: CMakeLists.txt  Renderer.cpp  Renderer.h  tutorial14.cpp
15) Deferred Shading/: CMakeLists.txt  Renderer.cpp  Renderer.h  Tutorial15.cpp
2) Matrix Transformations/: Renderer.cpp  Renderer.h  tutorial2.cpp
3) Texturing/: Renderer.cpp  Renderer.h  tutorial3.cpp
4) Depth & Transparency/: Renderer.cpp  Renderer.h  tutorial4.cpp
5) Stencils & Scissors/: Renderer.cpp  Renderer.h  tutorial5.cpp
6) Scene Graph/: Renderer.cpp  Renderer.h
7) Scene Management/: Renderer.cpp  Renderer.h  Tutorial7.cpp
8) Index Buffers/: Renderer.cpp  Renderer.h  tutorial8.cpp
9) Skeletal Animation/: Renderer.cpp  Renderer.h
Meshes/: Role_T.mat  readme.md
Meshes/quaternius/: DeadTree_1.msh  DeadTree_2.mat  DeadTree_2.msh  DeadTree_3.msh  DeadTree_4.msh  DeadTree_5.msh  Pine_1.msh  Pine_2.mat  Pine_2.msh  Pine_3.msh  Pine_4.mat  Pine_4.msh  Pine_5.msh  Rock_Medium_1.msh  Rock_Medium_2.msh  Rock_Medium_3.mat  Rock_Medium_3.msh
Shaders/: BasicVertex.glsl  BufferFragment.glsl  BumpFragment.glsl  BumpVertex.glsl  ColorFragment.glsl  CombineFrag.glsl  CombineVert.glsl  DeferredLight.frag  MatrixVertex.glsl  PerPixelFragment.glsl  PerPixelVertex.glsl  PointLightFrag.glsl  PointLightVertex.glsl  ReflectFragment.glsl  ReflectVertex.glsl  SceneFragment.glsl  ShadowFrag.glsl  ShadowSceneFrag.frag  ShadowSceneVert.glsl  ShadowVert.glsl  SkinningVertex.glsl  SkinningVertexShadow.vert  SkyboxFragment.glsl  SkyboxVertex.glsl  SnazzyFragment.glsl  SnazzyVertex.glsl  StencilFragment.glsl  TessControl.glsl  TessControlShadow.glsl  TessEval.glsl  TessEvalShadow.glsl  TessVertex.glsl  TexturedFragment.glsl  TexturedVertex.glsl  WaterHeightFragment.glsl  WaterHeightVertex.glsl  processfrag.glsl
Shaders/post/: passthroughFragment.glsl  passthroughVertex.glsl  timeWarp.glsl
Textures/: readme.md
Third Party/SOIL/: CMakeLists.txt
Third Party/SOIL/Simple OpenGL Image Library/src/: CMakeLists.txt  SOIL.c  stb_image_aug.c
coursework/: CMakeLists.txt  CameraPath.cpp  CameraPath.h  Renderer.cpp  Renderer.h  TimeWarp.cpp  TimeWarp.h  main.cpp
nclgl/: Blur.cpp  Blur.h  CMakeLists.txt  Camera.cpp  Camera.h  CubeBot.cpp  CubeBot.h  Frustum.cpp  Frustum.h  HeightMap.cpp  HeightMap.h  InputDevice.h  Keyboard.cpp  Keyboard.h  Light.cpp  Light.h  Materiel.cpp  Materiel.h  Matrix2.cpp  Matrix2.h  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  MeshAnimation.cpp  MeshAnimation.h  MeshMaterial.cpp  MeshMaterial.h  Mouse.cpp  Mouse.h  OGLRenderer.cpp  OGLRenderer.h  Plane.cpp  Plane.h  ResourceManager.cpp  ResourceManager.h  SceneNode.cpp  SceneNode.h  Shader.cpp  Shader.h  (+13 more)
nclgl/PostProcess/: Blur.cpp  Blur.h  Stage.h
